@@ -27,7 +27,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.cxf.jaxrs.client.WebClient;
 import org.apache.syncope.client.console.SyncopeConsoleSession;
@@ -158,7 +157,7 @@ public class ConnectorRestClient extends BaseRestClient {
         Response response = client.path(key).get();
         if (response.getStatus() == Response.Status.OK.getStatusCode()) {
             response = client.back(false).path("check").
-                    post(IOUtils.toString((InputStream) response.getEntity(), StandardCharsets.UTF_8));
+                    post(new String(((InputStream) response.getEntity()).readAllBytes(), StandardCharsets.UTF_8));
             return response.getStatus() == Response.Status.NO_CONTENT.getStatusCode();
         }
         return false;
