@@ -317,7 +317,7 @@ public abstract class AbstractPullResultHandler
         AnyTO before = getAnyTO(match.getAny());
         if (before == null) {
             result.setStatus(ProvisioningReport.Status.FAILURE);
-            result.setMessage(String.format("Any '%s(%s)' not found", provision.getAnyType(), match));
+            result.setMessage("Any '%s(%s)' not found".formatted(provision.getAnyType(), match));
         } else {
             result.setName(getName(before));
         }
@@ -443,7 +443,7 @@ public abstract class AbstractPullResultHandler
 
         if (before == null) {
             result.setStatus(ProvisioningReport.Status.FAILURE);
-            result.setMessage(String.format("Any '%s(%s)' not found", provision.getAnyType(), match));
+            result.setMessage("Any '%s(%s)' not found".formatted(provision.getAnyType(), match));
         }
 
         OpEvent.Outcome resultStatus = OpEvent.Outcome.SUCCESS;
@@ -557,7 +557,7 @@ public abstract class AbstractPullResultHandler
 
         if (before == null) {
             result.setStatus(ProvisioningReport.Status.FAILURE);
-            result.setMessage(String.format("Any '%s(%s)' not found", provision.getAnyType(), match));
+            result.setMessage("Any '%s(%s)' not found".formatted(provision.getAnyType(), match));
         }
 
         OpEvent.Outcome resultStatus = OpEvent.Outcome.SUCCESS;
